css/style.css
html {
    scroll-behavior: smooth;
  }
html, body {
    background-color: #0B0D11;
    color: #e6e6e6;
    height: 100%;
    font-family: Arial, Helvetica, sans-serif;
}
.container {
    background-color: #292A2E;
    box-shadow: 0px -5px 20px 10px rgb(0 0 0 / 70%);
    max-width: 1180px;
    margin: 0 auto;
    padding: 0px 10px;    
}
aside, main {
    padding: 15px;
}
.main_content {
    display: flex;
}
.cv_footer {
    display: flex;
    justify-content: space-between;
}
footer {
    background-color: #292A2E;
    box-shadow: 0px -5px 20px 10px rgb(0 0 0 / 70%);    
    max-width: 1180px;
    margin: 0 auto;
    padding: 15px 10px;
    margin-top: 15px;
}
footer a {
    color: #32beff;
    text-decoration: none;
}
aside {
    width: 25%;
}
main {
    width: 75%;
}
section {
    display: block;
}
.header {
    position: fixed;
    width: 100%;
    top: 0;
    left: 0;
    z-index: 9;
}
.header:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #292A2E;
    z-index: 2;
}
.header_body {
    position: relative;
    display: flex;
    justify-content: space-between;
    height: 80px;
    align-items: center;
}
.header_logo {
    flex: 0 0 100px;
    padding-left: 10px;
    overflow: hidden;
    position: relative;
    z-index: 3;
}
.header_logo img {
    width: 100%;
    display: block;
}
.content_text {
    font-size: 16px;
    line-height: 20px;    
}
.content_text.p {
    margin: 0px 0px 20px 0px;   
}
.content {
    padding: 80px 0px 0px 0px;
}
.header_burger {
    display: none;
}
.header_list {
    display: flex;
    position: relative;
    z-index: 2;
}
.header_list li {
    list-style: none;
    margin: 0px 0px 0px 20px;
}
.header_link {
    color: #ececec;
    text-transform: uppercase;
    font-size: 18px;
    text-decoration: none;
}
.work_photo {
    display: flex;
}
@media (max-width: 767px) {
    .main_content {
        display: block;
    }
    aside, main {
        width: 80%;
        margin: 0 auto;
    }
    .work_photo {
        display: block;
    }
    body.lock {
        overflow: hidden;
    }
    .header_list {
        display: block;
    }
    .header_list li {
        list-style: none;
        margin: 0px 0px 20px 0px;
    }
    .header_body {
        height: 50px;
    }
    .header_logo {
        flex: 0 0 70px;
    }
    .header_burger {
        display: block;
        position: relative;
        min-width: 30px;
        height: 20px;
        z-index: 3;
    }
    .header_burger span {
        position: absolute;
        background-color: #ececec;
        width: 100%;
        height: 2px;
        left: 0;
        top: 9px;
        transition: all 0.1s ease 0s;
    }
    .header_burger:before,
    .header_burger:after {
        content: '';
        background-color: #ececec;
        position: absolute;
        width: 100%;
        height: 2px;
        left: 0;
        transition: all 0.3s ease 0s;
    }
    .header_burger:before {
        top: 0;
    }
    .header_burger:after {
        bottom: 0;
    }
    .header_burger.active:before {
        transform: rotate(45deg);
        top: 9px;
    }
    .header_burger.active:after {
        transform: rotate(-45deg);
        bottom: 9px;
    }
    .header_burger.active span {
        transform: scale(0);
    }
    .header_menu {
        position: fixed;
        height: 100%;
        width: 100%;
        left: 0;
        top: -110%;
        transition: all 0.3s ease 0s;
        background-color: #0B0D11;
        padding: 70px 10px 20px 0px;
        overflow: auto;
    }
    .header_menu.active {
        top: 0%;
    }
}
@media (max-width: 420px) {
    aside, main {
        width: 90%;
        margin: 0 auto;
    }
    figure {
        margin-inline-start: 5px;
        margin-inline-end: 5px;
    }
}
.content {
    background-color: ;
}
.footer_rs_img {
    max-width: 100px;
}
.contacts-list {    
    padding-inline-start: 10px;
    line-height: 1.5em;
}
.skills, .uducat, .langs {    
    line-height: 2em;
}
#summary, #education, #languages {
    line-height: 1.5em;
}
.contacts-list li {
    list-style: none;
    padding-left: 10px;
}
.contacts-list li a {
    color: #e6e6e6;
    text-decoration: none;
}
.contacts-list li img {
    width: 25px;
    padding-right: 10px;
}
.foto img {
    width: 100%;
}
h2, h3, h4, #summary b {
    color: #32beff;
}
section {
    padding-top: 10px;
}
hr {
    width: 50%;
    border-top: 1px solid #32beff;
    border-bottom: 1px solid #32beff;
    display: inline-block;
    margin: 0 auto;
}
.colored {
    color: #32beff;
    font-style: italic;
}
.single_img img, .foto img {    
    border-radius: 5px;
    width: 100%;
    box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 35%); 
}
figure  {
    margin-inline-start: 10px;
    margin-inline-end: 10px;       
}
.visually-hidden {
    position: absolute;
    clip: rect(0 0 0 0);
    width: 1px;
    height: 1px;
    margin: -1px;
  }
iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
}
.video_block {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 35%); 
}
summary {
    margin-top: 20px;
}
figcaption {
    font-style: italic;
}
pre {
    border-radius: 10px;
    width: 100%;
    box-shadow: 0px 0px 15px 0px rgb(0 0 0 / 35%); 
}
pre code.rainbow-show {
    display: block;
    overflow-x: auto;
    padding: 1em;
}
.docs_link {
    text-decoration: none;
    color: #e6e6e6;
}
.single_img a {
    text-decoration: none;
    color: #32beff;
}
.link_block {
    padding-top: 15px;
}
.cv_footer_item { 
    width: 33%;
    align-self: center;
    text-align: center;
}

.cv_footer_item:first-child img {
    width: 25px;
    padding-right: 10px;
    vertical-align: bottom;
}

